Renamed index2.html to index.html, fixed menu slidedown etc, and made it work on mobile view also.

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ footer {
     nav {
         position: fixed;
         float: left;
+        overflow: auto;
+        height: 100%;
     }
 
     .menu {
@@ -37,6 +39,11 @@ footer {
 
     .sub-menu {
         padding-left: 0;
+    }
+
+    .sub-menu > .menu-item {
+        border-bottom: 0;
+        border-top: 1px solid #DDDDDD;
     }
 
     .menu-item {
@@ -101,7 +108,6 @@ footer {
 	}
 
 	.menu {
-		display: none;
 		border-bottom: 1px solid #DDDDDD;
 	}
 
